added Pajamachievements and Quick Bits

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
                 <li>3D Ultra Minigolf Adventures <br><a class="alert-link" href="https://archive.org/details/lets-play-3d-ultra-minigolf-adventures-1-2">https://archive.org/details/lets-play-3d-ultra-minigolf-adventures-1-2</a></li>
                 <li>The Red Dragon Inn <br><a class="alert-link" href="https://archive.org/details/hardcore-tabletop-presents-the-red-dragon-inn_202403">https://archive.org/details/hardcore-tabletop-presents-the-red-dragon-inn_202403</a></li>
                 <li>Lets Play Live: Life On Tour <br><a class="alert-link" href="https://archive.org/details/letsplaylivelifeontour">https://archive.org/details/letsplaylivelifeontour</a></li>
+                <li>Pajamachievements <br><a class="alert-link" href="https://archive.org/details/pajamachievements-rooster-teeth">https://archive.org/details/pajamachievements-rooster-teeth</a></li>
+                <li>Quick Bits <br><a class="alert-link" href="https://archive.org/details/quick-bits-rooster-teeth/Quick+Bits+Episode+10+｜+Rooster+Teeth+%5BTLC6OVrCHIs%5D.mp4">https://archive.org/details/quick-bits-rooster-teeth/Quick+Bits...</a></li>
               </ul>
             </div>
           </div>
