changed misc stuff to miscellaneos just thought it looks nicer

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </div>
                 <div class="container mb-3 frostedglass" id="com-archived">
                   <!-- MISC. STUFF -->
-                  <p class="fs-4 runguszone">Misc. Stuff:
+                  <p class="fs-4 runguszone">Miscellaneous:
                   </p><ul>
                     <li>Default Community Avatars + Avatars of Cast Members <br><a class="alert-link" href="https://archive.org/details/RTAvA">https://archive.org/details/RTAvA</a></li>
                   </ul>
