--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
         </div>
       </rowarea>
       <div class="container alert frostedglass" style="color:azure;">
-        <p class="runguszone text-center mb-n2">All content linked on this page is property of their respective owners</p><br>  
+        <p class="runguszone text-center mb-n">All content linked on this page is property of their respective owners</p><br>
+        <p class="runguszone text-center small mt-n">Thanks for everything, RT <3</p>  
         <span class="runguszone"><a href="https://rungus.zone/terms" class="alert-link">tos</a><br>
         <a href="https://github.com/runguszone/roosterteeth-archival-website" class="alert-link">this site doesn't update automatically, wanna help out?</a> 
         <span class="alert-link"></span>
