--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <span class="runguszone"><a href="https://rungus.zone/terms" class="alert-link">tos</a><br>
         <a href="https://github.com/runguszone/roosterteeth-archival-website" class="alert-link">this site doesn't update automatically, wanna help out?</a> 
         <span class="alert-link"></span>
-        <span class="float-end">❤, rungus & undeadmatrix</span><br></span>
+        <span class="float-end">❤, <a href="https://rungus.zone" style="color:azure;">rungus</a> & undeadmatrix</span><br></span>
       </div>
     </div>
   </body>
