--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                   <li>A Spot of Science <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-A-Spot-of-Science">https://archive.org/details/Rooster-Teeth-A-Spot-of-Science</a></li>
                   <li>Enjoy the Show: After The Credits <br><a class="alert-link" href="https://archive.org/details/enjoy-the-show-after-the-credits">https://archive.org/details/enjoy-the-show-after-the-credits</a></li>
                   <li>ANMA <br><a class="alert-link" href="https://archive.org/details/rt-anma">https://archive.org/details/rt-anma</a></li>
+                  <li>Black Box Down <br><a class="alert-link" href="https://archive.org/details/rt-black-box-down">https://archive.org/details/rt-black-box-down</a></li>
                 </ul>
               </div>
               <div class="container col-6">
