--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
       </rowarea>
       <div class="container alert frostedglass" style="color:azure;">
-        <p class="runguszone text-center small mb-n mt-n">Thanks for everything, RT <3</p>  
+        <p class="runguszone text-center small mb-n2 mt-n">Thanks for everything, RT <3</p>  
         <p class="runguszone text-center mb-n">All content linked on this page is property of their respective owners</p><br>
         <span class="runguszone"><a href="https://rungus.zone/terms" class="alert-link">tos</a><br>
         <a href="https://github.com/runguszone/roosterteeth-archival-website" class="alert-link">this site doesn't update automatically, wanna help out?</a> 
