--- a/index.html
+++ b/index.html
@@ -7,25 +7,19 @@
     <meta name="title" content="Archive of Pimps - Rooster Teeth Archival Project" />
     <meta charset="utf-8">
     <meta name="description" content="Archiving Every* RT Video" />
-    <!-- preload critical css first -->
-    <link rel="stylesheet" href="https://cdn.rungus.zone/v4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.rungus.zone/v4/css/custom.css">
-    <!-- defer backdrop and icons -->
-    <link rel="preload" href="https://cdn.rungus.zone/rt/rtbg.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdn.rungus.zone/rt/rtbg.css"></noscript>
-    <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"></noscript> -->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/power.css">
     <tags>
       <!-- opengraph -->
       <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://rungus.zone/roosterteeth/" />
+      <meta property="og:url" content="https://archiveofpimps.com/" />
       <meta property="og:title" content="Archive of Pimps" />
       <meta property="og:description" content="Archiving Every* Rooster Teeth Video" />
       <meta property="og:image" content="https://cdn.rungus.zone/rt/rt2.png" />
       <!-- twitter -->
       <!-- of course twitter has their own -->
       <meta property="twitter:card" content="summary_large_image" />
-      <meta property="twitter:url" content="https://rungus.zone/roosterteeth/" />
+      <meta property="twitter:url" content="https://archiveofpimps.com/" />
       <meta property="twitter:title" content="Archive of Pimps" />
       <meta property="twitter:description" content="Archiving Every* Rooster Teeth Video" />
       <meta property="twitter:image" content="https://cdn.rungus.zone/rt/rt2.png" />
