--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 <li>Quick Bits <br><a class="alert-link" href="https://archive.org/details/quick-bits-rooster-teeth/Quick+Bits+Episode+10+｜+Rooster+Teeth+%5BTLC6OVrCHIs%5D.mp4">https://archive.org/details/quick-bits-rooster-teeth/Quick+Bits...</a></li>
                 <li>Lets Watch: House Party <br><a class="alert-link" href="https://archive.org/details/lets-watch-house-party">https://archive.org/details/lets-watch-house-party</a></li>
                 <li>Achievement Hunter Predicts <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-predicts-rooster-teeth">https://archive.org/details/achievement-hunter-predicts-rooster-teeth</a></li>
+                <li>Let's Play Mari0 <br><a class="alert-link" href="https://archive.org/details/lets-play-mari0">https://archive.org/details/lets-play-mari0</a></li>
               </ul>
             </div>
           </div>
