add inside gaming shorts

--- a/index.html
+++ b/index.html
@@ -172,11 +172,18 @@
                   <li>All SP7 Videos <br><a class="alert-link" href="https://sp7archive.org/">https://sp7archive.org/</a></li>
                 </ul>
               </div>
-              <div class="container frostedglass" id="sp7-archived">
+              <div class="container mb-3 frostedglass" id="bft-archived">
                 <!-- BEST FRIENDS TODAY -->
                 <p class="fs-4 runguszone">Best Friends Today:
                 </p><ul>
                   <li>All(?) BFT Videos <br><a class="alert-link" href="https://archive.org/details/bft-archive">https://archive.org/details/bft-archive</a></li>
+                </ul>
+              </div>
+              <div class="container frostedglass" id="ig-archived">
+                <!-- BEST FRIENDS TODAY -->
+                <p class="fs-4 runguszone">Inside Gaming:
+                </p><ul>
+                  <li>Shorts <br><a class="alert-link" href="https://archive.org/details/inside-gaming-shorts-rooster-teeth">https://archive.org/details/inside-gaming-shorts-rooster-teeth</a></li>
                 </ul>
               </div>
             </div>
