add achievement city

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                   <p class="fs-4 runguszone">Miscellaneous:
                   </p><ul>
                     <li>Default Community Avatars + Avatars of Cast Members <br><a class="alert-link" href="https://archive.org/details/RTAvA">https://archive.org/details/RTAvA</a></li>
+                    <li>Achievement City <br><a class="alert-link" href="https://archive.org/details/achievement-city">https://archive.org/details/achievement-city</a></li>
                   </ul>
                 </div>
               </div>
