--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.rungus.zone/rt/fav/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.rungus.zone/rt/fav/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.rungus.zone/rt/fav/favicon-16x16.png">
+      <link rel="icon" href="css/google.ico">
       <link rel="manifest" href="https://cdn.rungus.zone/rt/fav/site.webmanifest">
       <link rel="mask-icon" href="https://cdn.rungus.zone/rt/fav/safari-pinned-tab.svg" color="#5bbad5">
       <link rel="shortcut icon" href="https://cdn.rungus.zone/rt/fav/favicon.ico">
