--- a/index.html
+++ b/index.html
@@ -243,7 +243,13 @@
         <rowarea>
         <div class="container alert frostedglass">
             <p class="text-center runguszone">Some RT channels were also dumped on "The Eye", go check that out!</p>
-            <p class="text-center runguszone mb-n2 fs-5"><a href="https://the-eye.eu/roosteretal/" class="alert-link">https://the-eye.eu/roosteretal/</a></p>
+            <p class="text-center runguszone fs-5"><a href="https://the-eye.eu/roosteretal/" class="alert-link">https://the-eye.eu/roosteretal/</a></p>
+            <hr>
+            <p class="text-center runguszone fs-1">Please donate to the Internet Archive!<br>
+              <span class="fs-5">Hosting all this cannot be cheap!</span><br>
+              <a href="https://archive.org/donate" class="alert-link text-center">https://archive.org/donate</a>
+            </p>
+            
         </div>
       </rowarea>
       <div class="container alert frostedglass" style="color:azure;">
