remove eye link for now

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <rowarea>
         <div class="container alert frostedglass">
             <p class="text-center runguszone">Some RT channels were also dumped on "The Eye", go check that out!</p>
-            <p class="text-center runguszone fs-5"><a href="https://the-eye.eu/roosteretal/" class="alert-link">https://the-eye.eu/roosteretal/</a></p>
+            <p class="text-center runguszone fs-5"><a href="#" class="alert-link">[down for right now :( - coming back soon]</a></p>
             <hr>
             <p class="text-center runguszone fs-1">Please donate to the Internet Archive!<br>
               <span class="fs-5">Hosting all this cannot be cheap!</span><br>
