--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
                     <li>Camp Camp S1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth">https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth</a></li>
                     <li>Camp Camp S2 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-campseason-two-soundtrack">https://archive.org/details/camp-campseason-two-soundtrack</a></li>
                     <li>RvB S15 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S15-OST">https://archive.org/details/RVB-S15-OST</a></li>
+                    <li>RvB S14 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S14-OST">https://archive.org/details/RVB-S14-OST</a></li>
                   </ul>
                 </div>
                 <div class="container mb-3 frostedglass" id="com-archived">
