added rvb s14 ost

--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!doctype html>
 <html lang="en" data-bs-theme="dark" class="spaceBG">
   <head>
-    <!-- Google Tag Manager -->
-  <script>
-  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TGVF6PHK');
-  </script>
-  <!-- End Google Tag Manager -->
+
     <!-- these meta tags cannot be nested in a module, so they're out here -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Archive of Pimps - Rooster Teeth Archival Project</title>
@@ -60,10 +52,6 @@
     </style>
   </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGVF6PHK"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
   <div class="container-fluid z-n1 position-absolute">
     <div class="container">
       <pagelogo>
@@ -239,6 +227,7 @@
                     <li>Camp Camp S2 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-campseason-two-soundtrack">https://archive.org/details/camp-campseason-two-soundtrack</a></li>
                     <li>RvB S15 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S15-OST">https://archive.org/details/RVB-S15-OST</a></li>
                     <li>RvB S14 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S14-OST">https://archive.org/details/RVB-S14-OST</a></li>
+                    <li>RWBY Vol. 1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol1CD">https://archive.org/details/RWBYVol1CD</a></li>
                   </ul>
                 </div>
                 <div class="container mb-3 frostedglass" id="com-archived">
@@ -256,7 +245,13 @@
         <rowarea>
         <div class="container alert frostedglass">
             <p class="text-center runguszone">Some RT channels were also dumped on "The Eye", go check that out!</p>
-            <p class="text-center runguszone mb-n2 fs-5"><a href="https://the-eye.eu/roosteretal/" class="alert-link">https://the-eye.eu/roosteretal/</a></p>
+            <p class="text-center runguszone fs-5"><a href="#" class="alert-link">[down for right now :( - coming back soon]</a></p>
+            <hr>
+            <p class="text-center runguszone fs-1">Please donate to the Internet Archive!<br>
+              <span class="fs-5">Hosting all this cannot be cheap!</span><br>
+              <a href="https://archive.org/donate" class="alert-link text-center">https://archive.org/donate</a>
+            </p>
+            
         </div>
       </rowarea>
       <div class="container alert frostedglass" style="color:azure;">
