--- a/index.html
+++ b/index.html
@@ -77,33 +77,48 @@
       <rowarea>
         <div class="container frostedglass pt-3 mb-3 pb-3" id="archived">
           <div class="row">
-            <div class="container frostedglass col-5" id="rt-archived">
-              <!-- ROOSTER TEETH -->
-              <p class="fs-4 runguszone">Rooster Teeth:
-              </p><ul>
-                <li>The Strangerhood <br><a class="alert-link" href="https://archive.org/details/SH_S1">https://archive.org/details/SH_S1</a></li>
-                <li>Happy Hour <br><a class="alert-link" href="https://archive.org/details/chickendentisthappyhour">https://archive.org/details/chickendentisthappyhour</a></li>
-                <li>Captain Dynamic <br><a class="alert-link" href="https://archive.org/details/captain-dynamic">https://archive.org/details/captain-dynamic</a></li>
-                <li>X-Ray & Vav <br><a class="alert-link" href="https://archive.org/details/x-ray-and-vav-series">https://archive.org/details/x-ray-and-vav-series</a></li>
-                <li>RWBY vol.1 to vol.5 <br><a class="alert-link" href="https://archive.org/details/rwby-complete-volumes-1-5">https://archive.org/details/rwby-complete-volumes-1-5</a></li>
-                <li>Red vs Blue: The Blood Gulch Chronicles <br><a class="alert-link" href="https://archive.org/details/blood-gulch-chronicles-2003">https://archive.org/details/blood-gulch-chronicles-2003</a></li>
-                <li>Red vs Blue: Recollection <br><a class="alert-link" href="https://archive.org/details/the-recollection">https://archive.org/details/the-recollection</a></li>
-                <li>Red vs Blue (non-remastered) S1-8<br><a class="alert-link" href="https://archive.org/details/red-vs-blue-non-remastered-archive">https://archive.org/details/red-vs-blue-non-remastered-archive</a></li>
-                <li>Free Play <br><a class="alert-link" href="https://archive.org/details/rt-free-play">https://archive.org/details/rt-free-play</a></li>
-                <li>Immersion <br><a class="alert-link" href="https://archive.org/details/immersion-trials-fusion-rooster-teeth-k-2r-xfzyy-1s/Behind+the+Scenes+at+RTX+and+Immersion+-+Horde+Mode+｜+Rooster+Teeth+%5BOZTMZHEWqEo%5D.mp4">https://archive.org/details/immersion...</a></li>
-                <li>Me Vs. Drunk Me <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Me-vs-drunk-me">https://archive.org/details/Rooster-Teeth-Me-vs-drunk-me</a></li>
-                <li>Ambush Interview <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview">https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview</a></li>
-                <li>Nomad of Nowhere <br><a class="alert-link" href="https://archive.org/details/n_20240307">https://archive.org/details/n_20240307</a></li>
-                <li>RT Comics <br><a class="alert-link" href="https://archive.org/details/rt-comics">https://archive.org/details/rt-comics</a></li>
-                <li>Buff Buddies <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Buff-Buddies">https://archive.org/details/Rooster-Teeth-Buff-Buddies</a></li>
-                <li>Dead Little Roosters <br><a class="alert-link" href="https://archive.org/details/dead-little-roosters">https://archive.org/details/dead-little-roosters</a></li>
-                <li>Nature Town <br><a class="alert-link" href="https://archive.org/details/nature-town-rt">https://archive.org/details/nature-town-rt</a></li>
-                <li>RTAA <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-animated-adventures">https://archive.org/details/rooster-teeth-animated-adventures</a></li>
-                <li>RT Shorts <br><a class="alert-link" href="https://archive.org/details/20240307_20240307_0237">https://archive.org/details/20240307_20240307_0237</a></li>
-                <li>Stroyent <br><a class="alert-link" href="https://archive.org/details/stroyent-rt">https://archive.org/details/stroyent-rt</a></li>
-                <li>One Minute Melee <br><a class="alert-link" href="https://archive.org/details/one-minute-melee-link-vs-sora-zelda-vs-kingdom-hearts-60fps-whu-e-8ou-wdi-q">https://archive.org/details/one-minute-melee...</a></li>
-                <li>Inside Gaming Shorts <br><a class="alert-link" href="https://archive.org/details/inside-gaming-shorts-rooster-teeth">https://archive.org/details/inside-gaming-shorts-rooster-teeth</a></li>
-              </ol>
+            <div class="col-5">
+              <div class="container frostedglass mb-3" id="rt-archived">
+                <!-- ROOSTER TEETH -->
+                <p class="fs-4 runguszone">Rooster Teeth:
+                </p><ul>
+                  <li>The Strangerhood <br><a class="alert-link" href="https://archive.org/details/SH_S1">https://archive.org/details/SH_S1</a></li>
+                  <li>Happy Hour <br><a class="alert-link" href="https://archive.org/details/chickendentisthappyhour">https://archive.org/details/chickendentisthappyhour</a></li>
+                  <li>Captain Dynamic <br><a class="alert-link" href="https://archive.org/details/captain-dynamic">https://archive.org/details/captain-dynamic</a></li>
+                  <li>X-Ray & Vav <br><a class="alert-link" href="https://archive.org/details/x-ray-and-vav-series">https://archive.org/details/x-ray-and-vav-series</a></li>
+                  <li>RWBY vol.1 to vol.5 <br><a class="alert-link" href="https://archive.org/details/rwby-complete-volumes-1-5">https://archive.org/details/rwby-complete-volumes-1-5</a></li>
+                  <li>Red vs Blue: The Blood Gulch Chronicles <br><a class="alert-link" href="https://archive.org/details/blood-gulch-chronicles-2003">https://archive.org/details/blood-gulch-chronicles-2003</a></li>
+                  <li>Red vs Blue: Recollection <br><a class="alert-link" href="https://archive.org/details/the-recollection">https://archive.org/details/the-recollection</a></li>
+                  <li>Red vs Blue (non-remastered) S1-8<br><a class="alert-link" href="https://archive.org/details/red-vs-blue-non-remastered-archive">https://archive.org/details/red-vs-blue-non-remastered-archive</a></li>
+                  <li>Free Play <br><a class="alert-link" href="https://archive.org/details/rt-free-play">https://archive.org/details/rt-free-play</a></li>
+                  <li>Immersion <br><a class="alert-link" href="https://archive.org/details/immersion-trials-fusion-rooster-teeth-k-2r-xfzyy-1s/Behind+the+Scenes+at+RTX+and+Immersion+-+Horde+Mode+｜+Rooster+Teeth+%5BOZTMZHEWqEo%5D.mp4">https://archive.org/details/immersion...</a></li>
+                  <li>Me Vs. Drunk Me <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Me-vs-drunk-me">https://archive.org/details/Rooster-Teeth-Me-vs-drunk-me</a></li>
+                  <li>Ambush Interview <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview">https://archive.org/details/Rooster-Teeth-Burnies-ambush-interview</a></li>
+                  <li>Nomad of Nowhere <br><a class="alert-link" href="https://archive.org/details/n_20240307">https://archive.org/details/n_20240307</a></li>
+                  <li>RT Comics <br><a class="alert-link" href="https://archive.org/details/rt-comics">https://archive.org/details/rt-comics</a></li>
+                  <li>Buff Buddies <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Buff-Buddies">https://archive.org/details/Rooster-Teeth-Buff-Buddies</a></li>
+                  <li>Dead Little Roosters <br><a class="alert-link" href="https://archive.org/details/dead-little-roosters">https://archive.org/details/dead-little-roosters</a></li>
+                  <li>Nature Town <br><a class="alert-link" href="https://archive.org/details/nature-town-rt">https://archive.org/details/nature-town-rt</a></li>
+                  <li>RTAA <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-animated-adventures">https://archive.org/details/rooster-teeth-animated-adventures</a></li>
+                  <li>RT Shorts <br><a class="alert-link" href="https://archive.org/details/20240307_20240307_0237">https://archive.org/details/20240307_20240307_0237</a></li>
+                  <li>Stroyent <br><a class="alert-link" href="https://archive.org/details/stroyent-rt">https://archive.org/details/stroyent-rt</a></li>
+                  <li>One Minute Melee <br><a class="alert-link" href="https://archive.org/details/one-minute-melee-link-vs-sora-zelda-vs-kingdom-hearts-60fps-whu-e-8ou-wdi-q">https://archive.org/details/one-minute-melee...</a></li>
+                  <li>Inside Gaming Shorts <br><a class="alert-link" href="https://archive.org/details/inside-gaming-shorts-rooster-teeth">https://archive.org/details/inside-gaming-shorts-rooster-teeth</a></li>
+                </ol>
+              </div>
+              <div class="container mb-3 frostedglass" id="fh-archived">
+                <!-- FUNHAUS -->
+                <p class="fs-4 runguszone">Funhaus:
+                </p><ul>
+                  <li>Funhaus 2015 <br><a class="alert-link" href="https://archive.org/details/funhaus_2015">https://archive.org/details/funhaus_2015</a></li>
+                  <li>Funhaus 2016 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2016">https://archive.org/details/funhaus_2016</a>
+                    <li>Funhaus 2017 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2017">https://archive.org/details/funhaus_2017</a></li>
+                    <li>Funhaus 2018 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2018">https://archive.org/details/funhaus_2018</a></li>
+                    <li>Funhaus 2019 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2019">https://archive.org/details/funhaus_2019</a></li>
+                    <li>Funhaus 2020 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2020">https://archive.org/details/funhaus_2020</a></li>
+                    <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-funhaus">https://archive.org/details/theater-mode-funhaus</a></li>
+                </ul>
+              </div>
             </div>
             <div class="container frostedglass col-6" id="ah-archived">
               <!-- ACHIEVEMENT HUNTER -->
@@ -139,6 +154,7 @@
                 <li>Summer Olympics 2012 <br><a class="alert-link" href="https://archive.org/details/lets-play-london-2012with-geoff-michael-gavin-and-ray-rooster-teeth-720p">https://archive.org/details/lets-play-london-2012with-geoff-michael-gavin-and-ray-rooster-teeth-720p</a></li>
                 <li>A Look Back At <br><a class="alert-link" href="https://archive.org/details/a-look-back-at-rooster-teeth">https://archive.org/details/a-look-back-at-rooster-teeth</a></li>
                 <li>Let's Play Mari0 <br><a class="alert-link" href="https://archive.org/details/lets-play-mari0">https://archive.org/details/lets-play-mari0</a></li>
+                <li>Let's Play GTA4 (incomplete) <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-gta-iv">https://archive.org/details/achievement-hunter-gta-iv</a></li>
               </ul>
             </div>
           </div>
@@ -146,17 +162,21 @@
         <br>
         <rowarea>
           <div class="row">
-            <div class="container frostedglass col-5" id="fh-archived">
-              <!-- FUNHAUS -->
-              <p class="fs-4 runguszone">Funhaus:
+            <div class="container frostedglass col-5" id="podcasts-archived">
+              <!-- PODCASTS -->
+              <p class="fs-4 runguszone">Podcasts:
               </p><ul>
-                <li>Funhaus 2015 <br><a class="alert-link" href="https://archive.org/details/funhaus_2015">https://archive.org/details/funhaus_2015</a></li>
-                <li>Funhaus 2016 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2016">https://archive.org/details/funhaus_2016</a>
-                  <li>Funhaus 2017 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2017">https://archive.org/details/funhaus_2017</a></li>
-                  <li>Funhaus 2018 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2018">https://archive.org/details/funhaus_2018</a></li>
-                  <li>Funhaus 2019 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2019">https://archive.org/details/funhaus_2019</a></li>
-                  <li>Funhaus 2020 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2020">https://archive.org/details/funhaus_2020</a></li>
-                  <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-funhaus">https://archive.org/details/theater-mode-funhaus</a></li>
+                <li>So... Alright <br><a class="alert-link" href="https://archive.org/details/rt-so-alright">https://archive.org/details/rt-so-alright</a></li>
+                <li>RT Podcast (1-235) <br><a class="alert-link" href="https://archive.org/details/roosterteeth-podcast-collection-2008">https://archive.org/details/roosterteeth-podcast-collection-2008</a></li>
+                <li>RT Podcast video (100-230) <br><a class="alert-link" href="https://archive.org/details/roosterteeth-podcast-collection-video-2011">https://archive.org/details/roosterteeth-podcast-collection-video-2011</a></li>
+                <li>Annual Pass <br><a class="alert-link" href="https://archive.org/details/rt-annual-pass">https://archive.org/details/rt-annual-pass</a></li>
+                <li><abbr title="(Always Open 1-140, On the Spot audio, Off Topic 1-64, Black Box Down 1-42, etc)">Assorted RT Podcasts</abbr> <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-podcast-network-2021">https://archive.org/details/rooster-teeth-podcast-network-2021</a></li>
+                <li>Let Me Clarify <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Let-Me-Clarify">https://archive.org/details/Rooster-Teeth-Let-Me-Clarify</a></li>
+                <li>A Simple Talk <br><a class="alert-link" href="https://archive.org/details/rt-a-simple-talk">https://archive.org/details/rt-a-simple-talk</a></li>
+                <li>A Spot of Science <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-A-Spot-of-Science">https://archive.org/details/Rooster-Teeth-A-Spot-of-Science</a></li>
+                <li>Enjoy the Show: After The Credits <br><a class="alert-link" href="https://archive.org/details/enjoy-the-show-after-the-credits">https://archive.org/details/enjoy-the-show-after-the-credits</a></li>
+                <li>ANMA <br><a class="alert-link" href="https://archive.org/details/rt-anma">https://archive.org/details/rt-anma</a></li>
+                <li>Black Box Down <br><a class="alert-link" href="https://archive.org/details/rt-black-box-down">https://archive.org/details/rt-black-box-down</a></li>
               </ul>
             </div>
             <div class="container col-6">
@@ -194,21 +214,12 @@
         </rowarea>
         <rowarea>
             <div class="row mt-3">
-              <div class="container frostedglass col-5" id="fh-archived">
-                <!-- PODCASTS -->
-                <p class="fs-4 runguszone">Podcasts:
+              <div class="container frostedglass col-5" id="agnw-archived">
+              <!-- ALL GOOD NO WORRIES -->
+                <p class="fs-4 runguszone">All Good No Worries:
                 </p><ul>
-                  <li>So... Alright <br><a class="alert-link" href="https://archive.org/details/rt-so-alright">https://archive.org/details/rt-so-alright</a></li>
-                  <li>RT Podcast (1-235) <br><a class="alert-link" href="https://archive.org/details/roosterteeth-podcast-collection-2008">https://archive.org/details/roosterteeth-podcast-collection-2008</a></li>
-                  <li>RT Podcast video (100-230) <br><a class="alert-link" href="https://archive.org/details/roosterteeth-podcast-collection-video-2011">https://archive.org/details/roosterteeth-podcast-collection-video-2011</a></li>
-                  <li>Annual Pass <br><a class="alert-link" href="https://archive.org/details/rt-annual-pass">https://archive.org/details/rt-annual-pass</a></li>
-                  <li><abbr title="(Always Open 1-140, On the Spot audio, Off Topic 1-64, Black Box Down 1-42, etc)">Assorted RT Podcasts</abbr> <br><a class="alert-link" href="https://archive.org/details/rooster-teeth-podcast-network-2021">https://archive.org/details/rooster-teeth-podcast-network-2021</a></li>
-                  <li>Let Me Clarify <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-Let-Me-Clarify">https://archive.org/details/Rooster-Teeth-Let-Me-Clarify</a></li>
-                  <li>A Simple Talk <br><a class="alert-link" href="https://archive.org/details/rt-a-simple-talk">https://archive.org/details/rt-a-simple-talk</a></li>
-                  <li>A Spot of Science <br><a class="alert-link" href="https://archive.org/details/Rooster-Teeth-A-Spot-of-Science">https://archive.org/details/Rooster-Teeth-A-Spot-of-Science</a></li>
-                  <li>Enjoy the Show: After The Credits <br><a class="alert-link" href="https://archive.org/details/enjoy-the-show-after-the-credits">https://archive.org/details/enjoy-the-show-after-the-credits</a></li>
-                  <li>ANMA <br><a class="alert-link" href="https://archive.org/details/rt-anma">https://archive.org/details/rt-anma</a></li>
-                  <li>Black Box Down <br><a class="alert-link" href="https://archive.org/details/rt-black-box-down">https://archive.org/details/rt-black-box-down</a></li>
+                  <li>How Hard Could It Be <br><a class="alert-link" href="https://archive.org/details/AGNW-How-Hard-Could-it-be">https://archive.org/details/AGNW-How-Hard-Could-it-be</a></li>
+                  <li>Cozy Couch <br><a class="alert-link" href="https://archive.org/details/old-school-barbie-game-still-works-cozy-couch-wh-7-wfbl-3-jjy">https://archive.org/details/old-school...</a></li>
                 </ul>
               </div>
               <div class="container col-6">
