--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <li>RT Shorts <br><a class="alert-link" href="https://archive.org/details/20240307_20240307_0237">https://archive.org/details/20240307_20240307_0237</a></li>
                   <li>Stroyent <br><a class="alert-link" href="https://archive.org/details/stroyent-rt">https://archive.org/details/stroyent-rt</a></li>
                   <li>One Minute Melee <br><a class="alert-link" href="https://archive.org/details/one-minute-melee-link-vs-sora-zelda-vs-kingdom-hearts-60fps-whu-e-8ou-wdi-q">https://archive.org/details/one-minute-melee...</a></li>
-                  <li>Inside Gaming Shorts <br><a class="alert-link" href="https://archive.org/details/inside-gaming-shorts-rooster-teeth">https://archive.org/details/inside-gaming-shorts-rooster-teeth</a></li>
+                  <li>Ten Little Roosters <br><a class="alert-link" href="https://archive.org/details/ten-little-roosters-episode-1-and-then-there-were-nine-4-k/Ten+Little+Roosters+-+Episode+1_+And+Then+There+Were+Nine+4K.mp4">https://archive.org/details/ten-little-roosters...</a></li>
                 </ol>
               </div>
               <div class="container mb-3 frostedglass" id="fh-archived">
@@ -235,11 +235,13 @@
                   <p class="fs-4 runguszone">Music:
                   </p><ul>
                     <li>Camp Camp S1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth">https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth</a></li>
-                    <li>Camp Camp S2 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-campseason-two-soundtrack">https://archive.org/details/camp-campseason-two-soundtrack</a></li>
+                    <li>Camp Camp S2 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-three-soundtrack/Another+Rap+Song+About+Foreign+Cars_1080p.mp4">https://archive.org/details/camp-camp-season-three...</a></li>
+                    <li>Camp Camp S3 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol5CD">https://archive.org/details/RWBYVol5CD</a></li>
                     <li>RvB S13 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S13-OST">https://archive.org/details/RVB-S13-OST</a></li>
                     <li>RvB S14 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S14-OST">https://archive.org/details/RVB-S14-OST</a></li>
                     <li>RvB S15 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S15-OST">https://archive.org/details/RVB-S15-OST</a></li>
                     <li>RWBY Vol. 1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol1CD">https://archive.org/details/RWBYVol1CD</a></li>
+                    <li>RWBY Vol. 5 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol5CD">https://archive.org/details/RWBYVol5CD</a></li>
                   </ul>
                 </div>
                 <div class="container mb-3 frostedglass" id="com-archived">
