--- a/index.html
+++ b/index.html
@@ -202,11 +202,18 @@
                   <li>All(?) BFT Videos <br><a class="alert-link" href="https://archive.org/details/bft-archive">https://archive.org/details/bft-archive</a></li>
                 </ul>
               </div>
-              <div class="container frostedglass" id="ig-archived">
-                <!-- BEST FRIENDS TODAY -->
+              <div class="container mb-3 frostedglass" id="ig-archived">
+                <!-- INSIDE GAMING -->
                 <p class="fs-4 runguszone">Inside Gaming:
                 </p><ul>
                   <li>Shorts <br><a class="alert-link" href="https://archive.org/details/inside-gaming-shorts-rooster-teeth">https://archive.org/details/inside-gaming-shorts-rooster-teeth</a></li>
+                </ul>
+              </div>
+              <div class="container mb-3 frostedglass" id="cc-archived">
+                <!-- COW CHOP -->
+                <p class="fs-4 runguszone">Cow Chop:
+                </p><ul>
+                  <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-cow-chop">https://archive.org/details/theater-mode-cow-chop</a></li>
                 </ul>
               </div>
             </div>
@@ -214,35 +221,29 @@
         </rowarea>
         <rowarea>
             <div class="row mt-3">
-              <div class="container frostedglass col-5" id="agnw-archived">
-              <!-- ALL GOOD NO WORRIES -->
+              <div class="container frostedglass col-5" id="music-archived">
+                <!-- MUSIC -->
+                <p class="fs-4 runguszone">Music:
+                </p><ul>
+                  <li>Camp Camp S1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth">https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth</a></li>
+                  <li>Camp Camp S2 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-three-soundtrack/Another+Rap+Song+About+Foreign+Cars_1080p.mp4">https://archive.org/details/camp-camp-season-three...</a></li>
+                  <li>Camp Camp S3 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol5CD">https://archive.org/details/RWBYVol5CD</a></li>
+                  <li>RvB S13 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S13-OST">https://archive.org/details/RVB-S13-OST</a></li>
+                  <li>RvB S14 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S14-OST">https://archive.org/details/RVB-S14-OST</a></li>
+                  <li>RvB S15 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S15-OST">https://archive.org/details/RVB-S15-OST</a></li>
+                  <li>RWBY Vol. 1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol1CD">https://archive.org/details/RWBYVol1CD</a></li>
+                  <li>RWBY Vol. 5 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol5CD">https://archive.org/details/RWBYVol5CD</a></li>
+                </ul>
+              </div>
+              <div class="container col-6">
+                
+                <div class="container mb-3 frostedglass" id="agnw-archived">
+                  <!-- ALL GOOD NO WORRIES -->
                 <p class="fs-4 runguszone">All Good No Worries:
                 </p><ul>
                   <li>How Hard Could It Be <br><a class="alert-link" href="https://archive.org/details/AGNW-How-Hard-Could-it-be">https://archive.org/details/AGNW-How-Hard-Could-it-be</a></li>
                   <li>Cozy Couch <br><a class="alert-link" href="https://archive.org/details/old-school-barbie-game-still-works-cozy-couch-wh-7-wfbl-3-jjy">https://archive.org/details/old-school...</a></li>
                 </ul>
-              </div>
-              <div class="container col-6">
-                <div class="container mb-3 frostedglass" id="cc-archived">
-                  <!-- COW CHOP -->
-                  <p class="fs-4 runguszone">Cow Chop:
-                  </p><ul>
-                    <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-cow-chop">https://archive.org/details/theater-mode-cow-chop</a></li>
-                  </ul>
-                </div>
-                <div class="container mb-3 frostedglass" id="ff-archived">
-                  <!-- MUSIC -->
-                  <p class="fs-4 runguszone">Music:
-                  </p><ul>
-                    <li>Camp Camp S1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth">https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth</a></li>
-                    <li>Camp Camp S2 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-three-soundtrack/Another+Rap+Song+About+Foreign+Cars_1080p.mp4">https://archive.org/details/camp-camp-season-three...</a></li>
-                    <li>Camp Camp S3 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol5CD">https://archive.org/details/RWBYVol5CD</a></li>
-                    <li>RvB S13 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S13-OST">https://archive.org/details/RVB-S13-OST</a></li>
-                    <li>RvB S14 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S14-OST">https://archive.org/details/RVB-S14-OST</a></li>
-                    <li>RvB S15 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S15-OST">https://archive.org/details/RVB-S15-OST</a></li>
-                    <li>RWBY Vol. 1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol1CD">https://archive.org/details/RWBYVol1CD</a></li>
-                    <li>RWBY Vol. 5 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol5CD">https://archive.org/details/RWBYVol5CD</a></li>
-                  </ul>
                 </div>
                 <div class="container mb-3 frostedglass" id="com-archived">
                   <!-- MISC. STUFF -->
