forcing css change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Archiving Every* RT Video" />
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/power.css">
+    <link rel="stylesheet" href="css/custom.css">
     <tags>
       <!-- opengraph -->
       <meta property="og:type" content="website" />
