fix formatting on footer

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             
         </div>
       </rowarea>
-      <div class="container mb-3 pb-2 frostedglass" style="color:azure;">
+      <div class="container mb-3 pb-2 frostedglass pt-3" style="color:azure;">
         <p class="runguszone text-center small mb-n2 mt-n">Thanks for everything, RT <3</p>  
         <p class="runguszone text-center mb-n">All content linked on this page is property of their respective owners</p><br>
         <span class="runguszone"><a href="https://rungus.zone/terms" class="alert-link">tos</a><br>
