--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                   <li>Camp Camp S2 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-campseason-two-soundtrack">https://archive.org/details/camp-campseason-two-soundtrack</a></li>
                   <li>Camp Camp S3 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-three-soundtrack/Another+Rap+Song+About+Foreign+Cars_1080p.mp4">https://archive.org/details/camp-camp-season-three...</a></li>\
                   <li>Camp Camp S4 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-four-soundtrack">https://archive.org/details/camp-camp-season-four-soundtrack</a></li>
+                  <li>RvB Revelation OST <br><a class="alert-link" href="https://archive.org/details/RVBRevelationOST">https://archive.org/details/RVBRevelationOST</a></li>
                   <li>RvB S13 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S13-OST">https://archive.org/details/RVB-S13-OST</a></li>
                   <li>RvB S14 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S14-OST">https://archive.org/details/RVB-S14-OST</a></li>
                   <li>RvB S15 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S15-OST">https://archive.org/details/RVB-S15-OST</a></li>
