--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                   <li>Let's Play GTA4 <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-gta-iv">https://archive.org/details/achievement-hunter-gta-iv</a></li>
                   <li>AH 2010 <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-2010_202403">https://archive.org/details/achievement-hunter-2010_202403</a></li>
                   <li>This Is... <br><a class="alert-link" href="https://archive.org/details/this-is...-rooster-teeth">https://archive.org/details/this-is...-rooster-teeth</a></li>
+                  <li>Imaginary Achievements <br><a class="alert-link" href="https://archive.org/details/imaginary-achievements-rooster-teeth">https://archive.org/details/imaginary-achievements-rooster-teeth</a></li>
                 </ul>
               </div>
               <div class="container mb-3 frostedglass" id="ff-archived">
