--- a/index.html
+++ b/index.html
@@ -60,25 +60,27 @@
     <div class="container">
       <pagelogo>
           <div class="row">
-            <div class="frostedglass mt-3 mb-3">
+            <div class="frostedglass mt-3 mb-3 pb-2">
               <p class="text-center m-0"><span class="runguszone siteText">Archive of Pimps</p>
-                <p class="fs-5 text-center runguszone">The Rooster Teeth Archival Project</p>        
+                <p class="fs-5 text-center runguszone">The Rooster Teeth Archival Project</p>
+                <hr>
+                <p class="text-center fs-1 runguszone">
+                  <span class="badge text-bg-primary"><span class="" id="time">loading...</span> <span id="increment"></span></span>
+                </p>
+                <hr>
+                <p class="text-center runguszone">Archiving everything Rooster Teeth because WB <em>cannot be trusted!</em></p>
+                <p class="text-center runguszone mb-n2 fs-5"><a href="https://discord.gg/SHCURNvG8v" class="alert-link">Join the Discord!</a> 
+                  - <a href="https://docs.google.com/spreadsheets/d/10g_7wKA2DEsoWWnG_RG-IyoZf3QEdIv8X97bUbrK5-E/edit?usp=sharing" class="alert-link">Source Document</a>
+                   - <a href="https://www.youtube.com/watch?v=yyFPu5lqE-I" class="alert-link">RT Announcement Livestream</a></p>        
             </div>
         </div>
       </pagelogo>
       <rowarea class="row">
-        <div class="container mb-3 frostedglass">
-            <p class="text-center fs-1 runguszone">
-              <span class="badge text-bg-dark"><span class="" id="time">loading...</span> <span id="increment"></span></span>
-            </p>
-            <hr>
-            <p class="text-center runguszone">Archiving everything Rooster Teeth because WB <em>cannot be trusted!</em></p>
-            <p class="text-center runguszone mb-n2 fs-5"><a href="https://discord.gg/SHCURNvG8v" class="alert-link">Join the Discord!</a> 
-              - <a href="https://docs.google.com/spreadsheets/d/10g_7wKA2DEsoWWnG_RG-IyoZf3QEdIv8X97bUbrK5-E/edit?usp=sharing" class="alert-link">Source Document</a>
-               - <a href="https://www.youtube.com/watch?v=yyFPu5lqE-I" class="alert-link">RT Announcement Livestream</a></p>
-        </div>
-      </rowarea>
-      <rowarea class="row">
+        <!--
+
+        LEFT COLUMN
+
+        -->
         <div class="container pt-3 mb-3 pb-3" id="archived">
           <div class="row align-items-start">
             <div class="col">
@@ -162,7 +164,23 @@
                   <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-cow-chop">https://archive.org/details/theater-mode-cow-chop</a></li>
                 </ul>
               </div>
+              <div class="container frostedglass" id="com-archived">
+                <!-- MISC. STUFF -->
+                <p class="fs-4 runguszone">Miscellaneous:
+                </p><ul>
+                  <li>Default Community Avatars + Avatars of Cast Members <br><a class="alert-link" href="https://archive.org/details/RTAvA">https://archive.org/details/RTAvA</a></li>
+                  <li>Achievement City <br><a class="alert-link" href="https://archive.org/details/achievement-city">https://archive.org/details/achievement-city</a></li>
+                </ul>
+                <hr>
+                <p class="text-center runguszone">Some RT channels were also dumped on "The Eye", go check that out!</p>
+                <p class="text-center runguszone fs-5"><a href="#" class="alert-link">[down for right now :( - coming back soon]</a></p>
+              </div>
             </div>
+            <!--
+
+              RIGHT COLUMN
+
+            -->
             <div class="col">
               <div class="container frostedglass mb-3" id="ah-archived">
                 <!-- ACHIEVEMENT HUNTER -->
@@ -232,7 +250,7 @@
                 </p><ul>
                   <li>Camp Camp S1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth">https://archive.org/details/camp-camp-season-one-soundtrack-rooster-teeth</a></li>
                   <li>Camp Camp S2 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-campseason-two-soundtrack">https://archive.org/details/camp-campseason-two-soundtrack</a></li>
-                  <li>Camp Camp S3 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-three-soundtrack/Another+Rap+Song+About+Foreign+Cars_1080p.mp4">https://archive.org/details/camp-camp-season-three...</a></li>\
+                  <li>Camp Camp S3 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-three-soundtrack/Another+Rap+Song+About+Foreign+Cars_1080p.mp4">https://archive.org/details/camp-camp-season-three...</a></li>
                   <li>Camp Camp S4 Soundtrack <br><a class="alert-link" href="https://archive.org/details/camp-camp-season-four-soundtrack">https://archive.org/details/camp-camp-season-four-soundtrack</a></li>
                   <li>RvB Revelation OST <br><a class="alert-link" href="https://archive.org/details/RVBRevelationOST">https://archive.org/details/RVBRevelationOST</a></li>
                   <li>RvB S13 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S13-OST">https://archive.org/details/RVB-S13-OST</a></li>
@@ -249,17 +267,7 @@
         <rowarea>
             <div class="row align-items-start">
               <div class="col">
-                <div class="container frostedglass" id="com-archived">
-                  <!-- MISC. STUFF -->
-                  <p class="fs-4 runguszone">Miscellaneous:
-                  </p><ul>
-                    <li>Default Community Avatars + Avatars of Cast Members <br><a class="alert-link" href="https://archive.org/details/RTAvA">https://archive.org/details/RTAvA</a></li>
-                    <li>Achievement City <br><a class="alert-link" href="https://archive.org/details/achievement-city">https://archive.org/details/achievement-city</a></li>
-                  </ul>
-                  <hr>
-                  <p class="text-center runguszone">Some RT channels were also dumped on "The Eye", go check that out!</p>
-                  <p class="text-center runguszone fs-5"><a href="#" class="alert-link">[down for right now :( - coming back soon]</a></p>
-                </div>
+                
               </div>
             </div>
           </div>
