minor formatting changes once more

--- a/index.html
+++ b/index.html
@@ -263,17 +263,8 @@
             </div>
           </div>
         </rowarea>
-        <br>
-        <rowarea>
-            <div class="row align-items-start">
-              <div class="col">
-                
-              </div>
-            </div>
-          </div>
-        </rowarea>
-        <rowarea>
-        <div class="container mb-3 frostedglass">
+        <rowarea class="row">
+        <div class="container mt-3 mb-3 frostedglass col">
             <p class="text-center runguszone fs-1">Please donate to the Internet Archive!<br>
               <span class="fs-5">Hosting all this cannot be cheap!</span><br>
               <a href="https://archive.org/donate" class="alert-link text-center">https://archive.org/donate</a>
@@ -281,19 +272,21 @@
             
         </div>
       </rowarea>
-      <div class="container mb-3 pb-2 frostedglass pt-3" style="color:azure;">
-        <p class="runguszone text-center small mb-n2 mt-n">Thanks for everything, RT <3</p>  
-        <p class="runguszone text-center mb-n">All content linked on this page is property of their respective owners</p><br>
-        <span class="runguszone"><a href="https://rungus.zone/terms" class="alert-link">tos</a><br>
-        <a href="https://github.com/runguszone/roosterteeth-archival-website" class="alert-link">this site doesn't update automatically, wanna help out?</a> 
-        <span class="alert-link"></span>
-        <span class="float-end">❤, <a href="https://rungus.zone" style="color:azure;">rungus</a> & <a href="https://www.instagram.com/undeadmatrix" style="color:azure;">undeadmatrix</a></span><br></span>
-      </div>
+      <rowarea class="row">
+        <div class="container mb-3 pb-2 frostedglass pt-3 col" style="color:azure;">
+          <p class="runguszone text-center small mb-n2 mt-n">Thanks for everything, RT <3</p>  
+          <p class="runguszone text-center mb-n">All content linked on this page is property of their respective owners</p><br>
+          <span class="runguszone"><a href="https://rungus.zone/terms" class="alert-link">tos</a><br>
+          <a href="https://github.com/runguszone/roosterteeth-archival-website" class="alert-link">this site doesn't update automatically, wanna help out?</a> 
+          <span class="alert-link"></span>
+          <span class="float-end">❤, <a href="https://rungus.zone" style="color:azure;">rungus</a> & <a href="https://www.instagram.com/undeadmatrix" style="color:azure;">undeadmatrix</a></span><br></span>
+        </div>
+      </rowarea>
     </div>
   </body>
   <!-- hopefully this loads last -->
   <script>
-    var countDownDate = new Date("May 5, 2024 00:00:00").getTime();
+    var countDownDate = new Date("May 5, 2024 00:00:00").getTime(); //according to RT livestream, inside games video said May 10th...
     var x = setInterval(function() {
       var now = new Date().getTime();
       var distance = countDownDate - now;
