more formatting stuff :)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <pagelogo>
           <div class="row">
             <div class="frostedglass mt-3 mb-3 pb-2">
-              <p class="text-center m-0"><span class="runguszone siteText">Archive of Pimps</p>
+              <p class="text-center m-0 runguszone siteText">Archive of Pimps</p>
                 <p class="fs-5 text-center runguszone">The Rooster Teeth Archival Project</p>
                 <hr>
                 <p class="text-center fs-1 runguszone">
@@ -110,7 +110,7 @@
                   <li>Stroyent <br><a class="alert-link" href="https://archive.org/details/stroyent-rt">https://archive.org/details/stroyent-rt</a></li>
                   <li>One Minute Melee <br><a class="alert-link" href="https://archive.org/details/one-minute-melee-link-vs-sora-zelda-vs-kingdom-hearts-60fps-whu-e-8ou-wdi-q">https://archive.org/details/one-minute-melee...</a></li>
                   <li>Ten Little Roosters <br><a class="alert-link" href="https://archive.org/details/ten-little-roosters-episode-1-and-then-there-were-nine-4-k/Ten+Little+Roosters+-+Episode+1_+And+Then+There+Were+Nine+4K.mp4">https://archive.org/details/ten-little-roosters...</a></li>
-                </ol>
+                </ul>
               </div>
               <div class="container mb-3 frostedglass" id="fh-archived">
                 <!-- FUNHAUS -->
@@ -264,13 +264,12 @@
           </div>
         </rowarea>
         <rowarea class="row">
-        <div class="container mt-3 mb-3 frostedglass col">
-            <p class="text-center runguszone fs-1">Please donate to the Internet Archive!<br>
-              <span class="fs-5">Hosting all this cannot be cheap!</span><br>
-              <a href="https://archive.org/donate" class="alert-link text-center">https://archive.org/donate</a>
-            </p>
-            
-        </div>
+          <div class="container mt-3 mb-3 frostedglass col">
+              <p class="text-center runguszone fs-1">Please donate to the Internet Archive!<br>
+                <span class="fs-5">Hosting all this cannot be cheap!</span><br>
+                <a href="https://archive.org/donate" class="alert-link text-center">https://archive.org/donate</a>
+              </p> 
+          </div>
       </rowarea>
       <rowarea class="row">
         <div class="container mb-3 pb-2 frostedglass pt-3 col" style="color:azure;">
