all i do is formatting changes now

--- a/index.html
+++ b/index.html
@@ -75,15 +75,13 @@
             </div>
         </div>
       </pagelogo>
-      <rowarea class="row">
-        <!--
-
-        LEFT COLUMN
-
-        -->
-        <div class="container pt-3 mb-3 pb-3" id="archived">
+      <rowarea>
+        <div class="pt-3 mb-3 pb-3" id="archived">
           <div class="row align-items-start">
             <div class="col">
+              <!-- 
+                LEFT COLUMN
+               -->
               <div class="container frostedglass mb-3" id="rt-archived">
                 <!-- ROOSTER TEETH -->
                 <p class="fs-4 runguszone">Rooster Teeth:
@@ -164,7 +162,7 @@
                   <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-cow-chop">https://archive.org/details/theater-mode-cow-chop</a></li>
                 </ul>
               </div>
-              <div class="container frostedglass" id="com-archived">
+              <div class="container frostedglass mb-3" id="com-archived">
                 <!-- MISC. STUFF -->
                 <p class="fs-4 runguszone">Miscellaneous:
                 </p><ul>
@@ -176,12 +174,10 @@
                 <p class="text-center runguszone fs-5"><a href="#" class="alert-link">[down for right now :( - coming back soon]</a></p>
               </div>
             </div>
-            <!--
-
-              RIGHT COLUMN
-
-            -->
             <div class="col">
+              <!-- 
+                RIGHT COLUMN
+               -->
               <div class="container frostedglass mb-3" id="ah-archived">
                 <!-- ACHIEVEMENT HUNTER -->
                 <p class="fs-4 runguszone">Achievement Hunter:
