add cloudberry kingdom, add note about vs missing episode

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-theater-mode">https://archive.org/details/achievement-hunter-theater-mode</a></li>
                   <li>RTX 2021 Theatre Mode Live <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-theater-mode-live-2021">https://archive.org/details/achievement-hunter-theater-mode-live-2021</a></li>
                   <li>Go! <br><a class="alert-link"  href="https://archive.org/details/go-achievement-hunter">https://archive.org/details/go-achievement-hunter</a>
-                  <li>VS <br><a class="alert-link"  href="https://archive.org/details/vs-achievement-hunter">https://archive.org/details/vs-achievement-hunter</a></li>
+                  <li><abbr title="missing ep 150">VS</abbr> <br><a class="alert-link"  href="https://archive.org/details/vs-achievement-hunter">https://archive.org/details/vs-achievement-hunter</a></li>
                   <li>Let's Build <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-lets-build">https://archive.org/details/achievement-hunter-lets-build</a></li>
                   <li>Haunter <br><a class="alert-link" href="https://archive.org/details/achievement-haunter">https://archive.org/details/achievement-haunter</a></li>
                   <li>Worms <br><a class="alert-link" href="https://archive.org/details/lets-play-worms-achievement-hunter">https://archive.org/details/lets-play-worms-achievement-hunter</a></li>
@@ -216,6 +216,7 @@
                   <li>AH 2010 <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-2010_202403">https://archive.org/details/achievement-hunter-2010_202403</a></li>
                   <li>This Is... <br><a class="alert-link" href="https://archive.org/details/this-is...-rooster-teeth">https://archive.org/details/this-is...-rooster-teeth</a></li>
                   <li>Imaginary Achievements <br><a class="alert-link" href="https://archive.org/details/imaginary-achievements-rooster-teeth">https://archive.org/details/imaginary-achievements-rooster-teeth</a></li>
+                  <li>Cloudberry Kingdom <br><a class="alert-link" href="https://archive.org/details/cloudberry-kingdom_202403">https://archive.org/details/cloudberry-kingdom_202403</a></li>
                 </ul>
               </div>
               <div class="container mb-3 frostedglass" id="ff-archived">
